--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -178,6 +178,14 @@ div::-webkit-scrollbar-thumb {
 
 
 
+.scrolling-x {   
+        overflow-x: auto;
+}
+
+.graphic-style {
+    background-size: 100% 100%;
+        background-image: linear-gradient(to right, white, rgba(0, 0, 0, 0.774))
+}
 
 
 
